# OpenGL-Game-Engine

./: .gitignore  CMakeLists.txt  imgui.ini  linux-preinstall.sh  Отчёт.docx
include/Game/: GameObject.h  ObjectsManager.h
include/Game/Components/: BehaviourComponent.h  CameraComponent.h  ClockComponent.h  Component.h  L4T1_Component.h  L4T4_Component.h  LightingComponent.h  ModelRendererComponent.h  RendererComponent.h  TransformComponent.h
include/Renderer/: Mesh.h  Model.h  Renderer.h  Texture.h  VertexArray.h
include/System/: Parser.h  Stopwatch.h  Window.h
preinstall/: fedora.sh  linux.sh
resources/labs/: 2.json  3.json  4.json
resources/projects/: L4-T1.json  L4-T3.json  L4-T4.json  courswork.json  lighting-test.json  lighting.json  models-test.json  test.json
resources/shaders/: default.frag  default.vert  filmGrain.frag  filmGrain.vert  grid.frag  grid.vert  monochrome.frag  monochrome.vert  simple.frag  simple.vert  standard-frag.glsl  standard-vert.glsl
source/: Lab.h  initFunction.h  main.cpp
source/Editor/: Editor.cpp  Editor.h  UiHandler.cpp  UiHandler.h
source/Game/: Component.h  GameObject.cpp  GameObject.h  NamedComponent.h  ObjectsManager.cpp  ObjectsManager.h  ResourceManager.cpp  ResourceManager.h
source/Game/Components/: BehaviourComponent.cpp  BehaviourComponent.h  CameraComponent.cpp  CameraComponent.h  ClockComponent.cpp  ClockComponent.h  Component.h  HyperboloidRendererComponent.cpp  HyperboloidRendererComponent.h  L4T1_Component.h  L4T3_Component.h  L4T4_Component.cpp  L4T4_Component.h  LightingComponent.cpp  LightingComponent.h  ModelRendererComponent.cpp  ModelRendererComponent.h  RendererComponent.cpp  RendererComponent.h  ShapeRendererComponent.cpp  ShapeRendererComponent.h  TransformComponent.cpp  TransformComponent.h
source/Game/Systems/: BehaviourSystem.cpp  BehaviourSystem.h  LightingSystem.cpp  LightingSystem.h  RendererSystem.cpp  RendererSystem.h
source/General/: Constants.h  Utils.cpp  Utils.h
source/Physic/: Circle.cpp  Circle.h  CollisionHandler.h  IShape.h  Rectangle.cpp  Rectangle.h
source/Renderer/: IndexBuffer.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
source/Resources/: ResourceManager.cpp  ResourceManager.h
source/System/: Constants.h  InputHandler.cpp  InputHandler.h  Parser.cpp  Parser.h  Stopwatch.h  Time.cpp  Time.h  Window.cpp  Window.h
